<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EnvironmentSetting">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnCalendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarStyle"
            android:text="@string/calendar_button"/>
        <Button
            android:id="@+id/btnInOutList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarStyle"
            android:text="@string/list_button"/>
        <Button
            android:id="@+id/btnStatistic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarStyle"
            android:text="@string/statistic_button"/>
        <Button
            android:id="@+id/btnSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarStyle"
            android:text="@string/setting_button"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:background="#cccccc"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/basic_setting"
                android:textSize="10dp"/>
            <Button
                android:id="@+id/btnLoginSetting"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="3dp"
                android:text="@string/login_info"
                android:textSize="10dp"
                android:background="#333333"
                android:textColor="#ffffff"/>
            <Button
                android:id="@+id/btnPassLock"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="3dp"
                android:text="@string/pass_lock"
                android:textSize="10dp"
                android:background="#333333"
                android:textColor="#ffffff"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:background="#cccccc"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category_manage"
                android:textSize="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <Button
                    android:id="@+id/btnIncomeCategorySetting"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:layout_margin="3dp"
                    android:text="@string/income_category_manage"
                    android:textSize="10dp"
                    android:background="#333333"
                    android:textColor="#ffffff"/>
                <Button
                    android:id="@+id/btnExpenseCategorySetting"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:layout_margin="3dp"
                    android:text="@string/expense_category_manage"
                    android:textSize="10dp"
                    android:background="#333333"
                    android:textColor="#ffffff"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btnCardSetting"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:layout_margin="3dp"
                    android:text="@string/card_manage"
                    android:textSize="10dp"
                    android:background="#333333"
                    android:textColor="#ffffff"/>
                <Button
                    android:id="@+id/btnAcountSetting"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:layout_margin="3dp"
                    android:text="@string/account_manage"
                    android:textSize="10dp"
                    android:background="#333333"
                    android:textColor="#ffffff"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:background="#cccccc"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/list_manage"
                android:textSize="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <Button
                    android:id="@+id/btnFavoriteMoneySetting"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:text="@string/favorite_list_manage"
                    android:textSize="10dp"
                    android:background="#333333"
                    android:textColor="#ffffff"/>
                <Button
                    android:id="@+id/btnFixedMoneySetting"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:text="@string/fixed_list_manage"
                    android:textSize="10dp"
                    android:background="#333333"
                    android:textColor="#ffffff"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:background="#cccccc"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/goal_and_budget_manage"
                android:textSize="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <Button
                    android:id="@+id/btnGoalSetting"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:text="@string/goal_manage"
                    android:textSize="10dp"
                    android:background="#333333"
                    android:textColor="#ffffff"/>
                <Button
                    android:id="@+id/btnBudgetSetting"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:text="@string/budget_manage"
                    android:textSize="10dp"
                    android:background="#333333"
                    android:textColor="#ffffff"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:background="#cccccc"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_init"
                android:textSize="10dp"/>
            <Button
                android:id="@+id/btnInitALittle"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="3dp"
                android:text="@string/money_part_init"
                android:textSize="10dp"
                android:background="#333333"
                android:textColor="#ffffff"/>
            <Button
                android:id="@+id/btnInitWhole"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="3dp"
                android:text="@string/whole_data_init"
                android:textSize="10dp"
                android:background="#333333"
                android:textColor="#ffffff"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp"
        android:background="#CCFFCC"
        android:gravity="right">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Time is Money"
                android:textColor="#003300"/>
            <TextView
                android:id="@+id/tvResultTimeValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:text="000.000.000.000.000"
                android:textColor="#33FF33"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnAddMoney"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="#003300"
            android:textColor="#CCFFCC"
            android:text="@string/button_add_money" />

    </LinearLayout>

</LinearLayout>