<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnCalendar"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calendar_button"/>

        <Button
            android:id="@+id/btnInOutList"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/list_button"/>
        <Button
            android:id="@+id/btnStatistic"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/statistic_button"/>
        <Button
            android:id="@+id/btnSetting"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting_button"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:background="#cccccc"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/gv_calendar_activity_b_last"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:text="이전달"
                android:textSize="5dp"/>
            <TextView
                android:text="2011년 몇월"
                android:textSize="15dp"
                android:id="@+id/gv_calendar_activity_tv_title"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="#000"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/gv_calendar_activity_b_next"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:text="다음달"
                android:textSize="5dp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="5dp"
                android:background="#cccccc" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:orientation="vertical"
                android:background="#eeeeee">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginLeft="5dp"
                        android:text="이번달 지출 :"
                        android:textSize="10dp"/>
                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:gravity="right"
                        android:text="10000원"
                        android:textSize="10dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginLeft="5dp"
                        android:text="이번달 수입 :"
                        android:textSize="10dp"/>
                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:gravity="right"
                        android:text="10000원"
                        android:textSize="10dp"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:orientation="vertical"
                android:background="#cccccc">
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="잔액"
                    android:layout_marginRight="5dp"
                    android:textSize="10dp"/>
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:gravity="right"
                    android:text="10000원"
                    android:textSize="10dp"/>
            </LinearLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="1dp"
                android:background="#cccccc"/>
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <GridView
            android:id="@+id/gv_calendar_activity_gv_calendar"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="30dp"
            android:numColumns="7"
            android:stretchMode="columnWidth"
            android:listSelector="@drawable/grideview_selector"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="10"
            android:background="#cccccc"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp"
        android:background="#CCFFCC"
        android:gravity="right">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Time is Money"
                android:textColor="#003300"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:text="000.000.000.000.000"
                android:textColor="#33FF33"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnAddMoney"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="#003300"
            android:textColor="#CCFFCC"
            android:text="@string/button_add_money" />

    </LinearLayout>

</LinearLayout>