<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".IncomeExpenseList" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnCalendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarStyle"
            android:text="@string/calendar_button"/>
        <Button
            android:id="@+id/btnInOutList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarStyle"
            android:text="@string/list_button"/>
        <Button
            android:id="@+id/btnStatistic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarStyle"
            android:text="@string/statistic_button"/>
        <Button
            android:id="@+id/btnSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarStyle"
            android:text="@string/setting_button"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:background="#003300"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:layout_weight="10">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/tvSearchPeriod"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="기간"
                    android:textColor="#003300"/>
                <Button
                    android:id="@+id/btnStartPeriod"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="25dp"
                    android:layout_margin="2dp"
                    android:text="언제부터?"
                    android:textSize="10dp"
                    android:background="#009900"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="~"/>
                <Button
                    android:id="@+id/btnEndPeriod"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="25dp"
                    android:layout_margin="2dp"
                    android:text="언제까지?"
                    android:textSize="10dp"
                    android:background="#009900"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/tvSearchCategory"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="범주"
                    android:textColor="#003300"/>
                <Button
                    android:id="@+id/btnSearchCategory"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_margin="2dp"
                    android:text="범주를 설정하세요"
                    android:textSize="10dp"
                    android:background="#009900"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/tvSearchTag"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="태그"
                    android:textColor="#003300"/>
                <Button
                    android:id="@+id/btnSearchTag"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_margin="2dp"
                    android:text="태그를 설정하세요"
                    android:textSize="10dp"
                    android:background="#009900"/>
            </LinearLayout>

        </LinearLayout>
        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="#003300"
            android:textColor="#CCFFCC"
            android:text="검색"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:background="#003300"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvFeedback"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="피드백"
            android:background="#eeeeee"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:padding="5dp"
            android:orientation="vertical"
            android:background="#eeeeee">

            <TextView
                android:id="@+id/tvIncome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="수입 :"
                android:textSize="13dp"
                android:textColor="#003300"/>

            <TextView
                android:id="@+id/tvExpense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="지출 :"
                android:textSize="13dp"
                android:textColor="#003300"/>

            <TextView
                android:id="@+id/tvBalance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="잔액 :"
                android:textSize="13dp"
                android:textColor="#003300"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:background="#003300"/>
    <ListView
        android:id="@+id/listIncomeAndExpense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"></ListView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:background="#003300"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp"
        android:background="#CCFFCC"
        android:gravity="right">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Time is Money"
                android:textColor="#003300"/>
            <TextView
                android:id="@+id/tvConvertToTimeValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:text="000.000.000.000.000"
                android:textColor="#33FF33"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnAddMoney"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="#003300"
            android:textColor="#CCFFCC"
            android:text="@string/button_add_money" />

    </LinearLayout>

</LinearLayout>